Fix resizable handle not being fully visible
Previously, `overflow: hidden` was needed because the height constraint and
padding could push the content out of the container. Now this should not be
possible.

--- a/assets/js/blocks/featured-product/style.scss
+++ b/assets/js/blocks/featured-product/style.scss
@@ -2,7 +2,6 @@
 	background-color: transparent;
 	border-color: transparent;
 	color: #fff;
-	overflow: hidden;
 	box-sizing: border-box;
 
 	.components-resizable-box__container {
